--- a/rasa/data/stories.yml
+++ b/rasa/data/stories.yml
@@ -678,8 +678,6 @@ stories:
           - action: utter_rut_hp
           - intent: nghi_hoc_tam_thoi
           - action: utter_nghi_hoc_tam_thoi
-          - intent: di_hoc_lai
-          - action: utter_di_hoc_lai
 
     - story: chao - diem xt - time nhap hoc - nhiem vu co ban - sap xep sv
       steps:
@@ -740,3 +738,250 @@ stories:
           - action: utter_thi_sat_hach
           - intent: bye
           - action: utter_bye
+
+    #story mới thêm bổ sung
+
+    - story: chao - cach hoc - khung thoi gian - phuong phap hoc - thank
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: thank
+          - action: utter_thank
+    - story: chao - so tin chi - hoc phi - thoi gian hoc - dieu kien ra truong
+      steps:
+          - intent: chaohoi
+          - action: action_but
+    - story: chao - quy che - diem ren luyen - hinh thuc ky luat
+      steps:
+          - intent: chaohoi
+          - action: action_but
+    - story: chao - giao vien - kiem tra - thi cuoi ky - bye
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: bye
+          - action: utter_bye
+    - story: chao - chuyen nganh - chuyen truong - nghi hoc tam thoi - bye
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: nghi_hoc_tam_thoi
+          - action: utter_nghi_hoc_tam_thoi
+          - intent: bye
+          - action: utter_bye
+    - story: chao - chuong trinh khung - thoi gian dao tao - cac chuyen nganh
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: time_dao_tao
+          - action: utter_time_dao_tao
+    - story: chao - diem xet tuyen - thuc hanh - do an tot nghiep - thank - bye
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: thank
+          - action: utter_thank
+          - intent: bye
+          - action: utter_bye
+    - story: chao - tu van cntt - ngon ngu - lap trinh - bye
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: ngonngu
+          - action: action_ngonngu
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: bye
+          - action: utter_bye
+    - story: chao - tu van - lap trinh - luong - thank
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: luong
+          - action: action_luong
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh - hoc bong  - tạm biệt
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: hocbong
+          - action: utter_hocbong
+          - intent: bye
+          - action: utter_bye
+    - story: chao - tu van - lap trinh - ung dung - viec lam - bye
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: ungdung
+          - action: action_ungdung
+          - intent: vieclam
+          - action: action_vieclam
+          - intent: bye
+          - action: utter_bye
+    - story: tu van - lap trinh - luong  - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: luong
+          - action: action_luong
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh - kien thuc ra truong - luong - yeu cau tieng anh  - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: kienthuccancokhiratruong
+          - action: action_kienthuccancokhiratruong
+          - intent: luong
+          - action: action_luong
+          - intent: dieukientoeic
+          - action: utter_dieukientoeic
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh -  điểm số - học bổng - yeu cau tieng anh  - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: diemso
+          - action: action_diemso
+          - intent: hocbong
+          - action: utter_hocbong
+          - intent: dieukientoeic
+          - action: utter_dieukientoeic
+          - intent: thank
+          - action: utter_thank
+    - story: Chào - tư vấn - lap trinh - hoc phi - thank - tạm biệt
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: hocphi
+          - action: action_hocphi
+          - intent: thank
+          - action: utter_thank
+          - intent: bye
+          - action: utter_bye
+    - story: Chào - lap trinh - tin chi khoa - hoc phi - thank
+      steps:
+          - intent: chaohoi
+          - action: action_but
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: tinchi
+          - action: action_tinchi
+          - intent: hocphi
+          - action: action_hocphi
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh - kien thuc ra truong - thuc tap doanh nghiep - yeu cau tieng anh  - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: kienthuccancokhiratruong
+          - action: action_kienthuccancokhiratruong
+          - intent: luong
+          - action: action_luong
+          - intent: dieukientoeic
+          - action: utter_dieukientoeic
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh - yeu cau - dao tao - kien thuc
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: yeucau
+          - action: action_yeucau
+          - intent: kienthuc
+          - action: action_kienthuc
+    - story: tu van - lap trinh - yeu cau - cuoc thi - ky nang
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: yeucau
+          - action: action_yeucau
+          - intent: cuocthi
+          - action: utter_cuocthi
+          - intent: kynang
+          - action: action_kynang
+    - story: tu van - lap trinh - cach hoc - kien thuc  - thuc hanh - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: cachhoc
+          - action: action_cachhoc
+          - intent: thuchanh
+          - action: action_thuchanh
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh - lo trinh hoc  - mon hoc -  ngonngu - kien thuc can co khi ra truong - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: lotrinhhoc
+          - action: action_lotrinhhoc
+          - intent: monhoc
+          - action: action_monhoc
+          - intent: ngonngu
+          - action: action_ngonngu
+          - intent: kienthuccancokhiratruong
+          - action: action_kienthuccancokhiratruong
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh - xu huong - viec lam - phong van - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: xuhuong
+          - action: action_xuhuong
+          - intent: vieclam
+          - action: action_vieclam
+          - intent: phongvan
+          - action: action_phongvan
+          - intent: thank
+          - action: utter_thank
+    - story: tu van - lap trinh - lo trinh hoc - bai tap lon - do an tot nghiep - thank
+      steps:
+          - intent: tuvan
+          - action: action_tuvan
+          - intent: laptrinh
+          - action: action_laptrinh
+          - intent: lotrinhhoc
+          - action: action_lotrinhhoc
+          - intent: baitaplon
+          - action: action_baitaplon
+          - intent: doantotnghiep
+          - action: action_doantotnghiep
+          - intent: thank
+          - action: utter_thank
