--- a/rasa/config.yml
+++ b/rasa/config.yml
@@ -2,29 +2,28 @@
 # https://rasa.com/docs/rasa/nlu/components/
 language: vi
 pipeline:
-  - name: VietnameseTokenizer
-  - name: RegexFeaturizer
-  - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
-  - name: CountVectorsFeaturizer
-    analyzer: "char_wb"
-    min_ngram: 1
-    max_ngram: 4
-  - name: DIETClassifier
-    epochs: 100
-  - name: EntitySynonymMapper
-  - name: ResponseSelector
-    epochs: 100
+    - name: VietnameseTokenizer
+    - name: RegexFeaturizer
+    - name: LexicalSyntacticFeaturizer
+    - name: CountVectorsFeaturizer
+    - name: CountVectorsFeaturizer
+      analyzer: "char_wb"
+      min_ngram: 1
+      max_ngram: 4
+    - name: DIETClassifier
+      epochs: 20
+    - name: EntitySynonymMapper
+    - name: ResponseSelector
+      epochs: 20
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
 policies:
-  - name: MemoizationPolicy
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
-  - name: MappingPolicy
-  - name: FallbackPolicy
-    nlu_threshold: 0.8
-    core_threshold: 0.1
-    fallback_action_name: action_unknown
+    - name: MemoizationPolicy
+    - name: TEDPolicy
+      max_history: 5
+      epochs: 20
+    - name: MappingPolicy
+      # nlu_threshold: 0.6
+      # core_threshold: 0.1
+      # fallback_action_name: action_unknown
