--- a/rasa/config.yml
+++ b/rasa/config.yml
@@ -1,29 +1,28 @@
 # Configuration for Rasa NLU.
 # https://rasa.com/docs/rasa/nlu/components/
-language: vi
+language: en
+
 pipeline:
-    - name: VietnameseTokenizer
+    - name: WhitespaceTokenizer
     - name: RegexFeaturizer
     - name: LexicalSyntacticFeaturizer
-    - name: CountVectorsFeaturizer
     - name: CountVectorsFeaturizer
       analyzer: "char_wb"
       min_ngram: 1
       max_ngram: 4
     - name: DIETClassifier
-      epochs: 20
+      epochs: 50
     - name: EntitySynonymMapper
     - name: ResponseSelector
-      epochs: 20
+      epochs: 50
 
-# Configuration for Rasa Core.
-# https://rasa.com/docs/rasa/core/policies/
 policies:
     - name: MemoizationPolicy
     - name: TEDPolicy
-      max_history: 5
-      epochs: 20
+      max_history: 12
+      epochs: 50
     - name: MappingPolicy
-      # nlu_threshold: 0.6
-      # core_threshold: 0.1
-      # fallback_action_name: action_unknown
+    - name: RulePolicy
+      nlu_threshold: 0.6
+      core_threshold: 0.1
+      fallback_action_name: action_unknown
